# django_demo

./: Dockerfile  docker-compose.yml  pyproject.toml
polls/: models.py  views.py
polls/migrations/: 0001_initial.py
src/: asgi.py  settings.py  urls.py  wsgi.py
