[tool.poetry]
name = "django_demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
mysqlclient = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
